--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>I am hanif. <h1>
+        <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
+        <h3>Lorem ipsum dolor sit amet.</h3>
 </body>
 </html>
