--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>I am hanif. <h1>
         <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
         <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>new blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi reiciendis blanditiis quam amet cum aut quisquam minus impedit consequatur, ea eaque quas et deleniti omnis voluptatem, qui sequi adipisci vero facere officia culpa. Ipsum sequi dolore nemo doloremque sit amet reprehenderit cum culpa maxime quaerat minima ad iste, autem unde.</p>
 </body>
 </html>
